# tibi-mobile-2020

client/: .babelrc  App.js  README.md  app.json  package.json
client/android/: settings.gradle
client/constants/: icons.js  images.js  index.js  theme.js
client/ios/: Podfile
client/models/: AnnouncementSlidesSchema.js  EventForumPostsSchema.js  EventMembersSchema.js  EventsSchema.js  InterestsSchema.js  SocietiesSchema.js  SocietyForumPostsSchema.js  SocietyMembersSchema.js  UsersSchema.js
client/navigation/: tabs.js
client/screens/: CommunityScreen.js  (+5 more)
server/: .env  .gitignore  Cargo.toml  PostgreDocker  RedisDocker  diesel.toml  redis.conf  start_db.sh  start_redis.sh
server/api_docs/: announcement.md  auth.md  chat.md  event.md  image.md  user.md
server/migrations/2020-09-19-163052_create_users/: up.sql
server/migrations/2020-09-23-084458_images/: down.sql  up.sql
server/migrations/2020-09-23-151400_announcements/: down.sql  up.sql
server/migrations/2020-09-23-173902_events/: down.sql  up.sql
server/migrations/2020-09-28-105140_chat/: down.sql  up.sql
server/src/: actions.rs  cli.yml  config.rs  custom_schema_types.rs  error.rs  logging.rs  main.rs  model.rs  schema.rs  util.rs
server/src/announcement/: mod.rs  request.rs  response.rs
server/src/auth/: jwt.rs  middleware.rs  mod.rs  request.rs  response.rs  sso_state.rs
server/src/chat/: live.rs  mod.rs  request.rs  response.rs
server/src/event/: mod.rs  request.rs  response.rs
server/src/image/: mod.rs  request.rs  response.rs
server/src/user/: mod.rs  request.rs  response.rs
(+44 files in other folders)
