[package]
name = "server"
version = "0.1.0"
authors = ["louisdewardt <contact@louis.dewardt.uk>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.0", features = ["rustls"] }
actix = "0.10"
actix-multipart = "0.3"
actix-files = "0.3"
actix-service = "1.0.6"
actix-web-actors = "3.0.0"
# TODO: lookout for next release when unnecessary Option is removed from connection to remove git url
bb8-redis = { git = "https://github.com/khuey/bb8", rev = "3f958b1" }
thiserror = "1.0"
clap = { version = "2", features = ["yaml"] }
slog = "2.5"
sloggers = "1.0"
dotenv = "0.15.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
jwt = "0.10"
hmac = "0.8"
sha2 = "0.9"
futures-util = "0.3"
